--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Student Council</title>
-  <meta charset="utf-8"/>
-  <link rel="stylesheet" type="text/css" href="main.css">
-</head>
-<body>
-<div class="container">
-<div class="nav">
-  <h2>welcome.</h2>
-<ul>
-  <li>upcoming events</li>
-  <li>photos</li>
-  <li>stuco out there</li>
-  <li>join the team!</li>
-  <li>about + contact</li>
-</ul>
-</div>
-<div class="main">
-  <h1>c-pphs student council</h1>
-<h3>student-driven success.</h3>
-<p> prom. winter festivals. homecoming. spirit weeks. and so much more. all here at corning-painted post high school. click for a <a href="cities.html"> complete list</a> of events we host.</p>
-<video width="600" height="300" controls>
-  <source src="https://content.codecademy.com/projects/make-a-website/lesson-1/ollie.mp4" type="video/mp4">
-</div>
-<!img src="https://content.codecademy.com/projects/make-a-website/lesson-1/bikes2.jpg"/>
-</div>
-</body>
-</html>
 
-<!"https://www.sloan.com/sites/default/files/2016-08/corning-painted-post.jpg">
+<head>
+	<title>Student Council</title>
+	<meta charset="utf-8" />
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<div class="entire">
+
+	<body>
+		<div class="header">
+		<h1>welcome to the C-PPHS student council.</h1>
+		</div>
+		<nav>
+			<div class="nav">
+				<ul>
+					<li>upcoming events</li>
+					<li>photos</li>
+					<li>stuco out there</li>
+					<li>join the team!</li>
+					<li>about + contact</li>
+				</ul>
+			</div>
+		</nav>
+		<div class="main">
+			<h3>students are the center of all we do.</h3>
+			<p> prom. winter festivals. homecoming. spirit weeks. and so much more. all here at corning-painted post high school.
+				click for a <a href="cities.html"> complete list</a> of events we host.</p>
+			<!img width=850 height=550 src="https://www.sloan.com/sites/default/files/2016-08/corning-painted-post.jpg"/>
+		</div>
+	</body>
+</div>
+
+</html>
