changed standard html to bootstrap and added button to jumbotron

--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	<title>Student Council</title>
-	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="style.css">
+  <title>c-pphs student council</title>
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<div class="entire">
+<body>
+<header class="container">
+  <div class="row">
+    <h1 class="col-sm-4">student council</h1>
+    <nav class="col-sm-8 text-center">
+      <p>upcoming events</p>
+      <p>photos</p>
+      <p>official spiritwear</p>
+      <p>our team</p>
+      <p>join the team</p>
+      <p>about us</p>
+    </nav>
+  </div>
+</header>
+<section class="jumbotron">
+  <div class="container">
+    <div class="row text-center">
+      <h2>students are the center of all we do.</h2>
+      <h3>to see a complete list of events we host,</h3>
+      <a class="btn btn-primary" href="#" role="button">click here</a>
+    </div>
+  </div>
+</section>
 
-	<body>
-		<div class="header">
-		<h1>welcome to the C-PPHS student council.</h1>
-		</div>
-		<nav>
-			<div class="nav">
-				<ul>
-					<li>upcoming events</li>
-					<li>photos</li>
-					<li>stuco out there</li>
-					<li>join the team!</li>
-					<li>about + contact</li>
-				</ul>
-			</div>
-		</nav>
-		<div class="main">
-			<h3>students are the center of all we do.</h3>
-			<p> prom. winter festivals. homecoming. spirit weeks. and so much more. all here at corning-painted post high school.
-				click for a <a href="cities.html"> complete list</a> of events we host.</p>
-			<!img width=850 height=550 src="https://www.sloan.com/sites/default/files/2016-08/corning-painted-post.jpg"/>
-		</div>
-	</body>
-</div>
-
+</body>
 </html>
