added stars, got nav bar to align inline using webkit, adjusted margins, resized h1

--- a/index.html
+++ b/index.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>c-pphs student council</title>
-  <meta charset="utf-8"/>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="style.css">
+	<title>c-pphs student council</title>
+	<meta charset="utf-8" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+	 crossorigin="anonymous">
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-<header class="container">
-  <div class="row">
-    <h1 class="col-sm-4">student council</h1>
-    <nav class="col-sm-8 text-center">
-      <p>upcoming events</p>
-      <p>photos</p>
-      <p>official spiritwear</p>
-      <p>our team</p>
-      <p>join the team</p>
-      <p>about us</p>
-    </nav>
-  </div>
-</header>
-<section class="jumbotron">
-  <div class="container">
-    <div class="row text-center">
-      <h2>students are the center of all we do.</h2>
-      <h3>to see a complete list of events we host,</h3>
-      <a class="btn btn-primary" href="#" role="button">click here</a>
-    </div>
-  </div>
-</section>
+	<header class="container">
+		<div class="row">
+			<h1 class="col-sm-4">#hawknation</h1>
+			<nav class="col-sm-8 text-center">
+				<p>upcoming events &#9734</p>
+				<p>photos &#9734</p>
+				<p>official spiritwear &#9734</p>
+				<p>our team &#9734</p>
+				<p>join the team &#9734</p>
+				<p>about us &#9734</p>
+			</nav>
+		</div>
+	</header>
+	<section class="jumbotron">
+		<div class="container">
+			<div class="row text-center">
+				<h2>welcome to the cpphs student council</h2>
+				<h3>&#9733 where students are the center of all we do &#9733</h3>
+				<a class="btn btn-primary" href="#" role="button">about us</a>
+			</div>
+		</div>
+	</section>
 
 </body>
+
 </html>
