--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 		<div class="row">
 			<h1 class="col-sm-4">#hawknation</h1>
 			<nav class="col-sm-8 text-center">
-				<p>upcoming events &#9734</p>
-				<p>photos &#9734</p>
-				<p>official spiritwear &#9734</p>
-				<p>our team &#9734</p>
-				<p>join the team &#9734</p>
-				<p>about us &#9734</p>
+				<p class="nav-item"> <a class="nav-link" href="html/upcomingevents.html"> upcoming events &#9734 </a></p>
+				<p class="nav-item"> <a class="nav-link" href="html/photos.html"> photos &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="html/spiritwear.html"> spiritwear &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="html/ourteam.html"> our team &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="html/jointheteam.html"> join the team &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="html/aboutus.html"> about us &#9734</a></p>
 			</nav>
 		</div>
 	</header>
@@ -29,11 +29,12 @@
 			<div class="row text-center">
 				<h2>welcome to the cpphs student council</h2>
 				<h3>&#9733 where students are the center of all we do &#9733</h3>
-				<a class="btn btn-primary" href="#" role="button">about us</a>
+				<a class="btn btn-primary" href="html/aboutus.html" role="button">about us</a>
 			</div>
 		</div>
 	</section>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.1/umd/react.production.min.js"></script>
 </body>
 
 </html>
