--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -11,5 +11,10 @@
 </head>
 
 <body>
-	<p> hi </p>
+	<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="html/index.html">landing</a></li>
+      <li class="breadcrumb-item"><a href="html/aboutus.html">about us</a></li>
+    </ol>
+  </nav>
 </body>
