--- a/html/ourteam.html
+++ b/html/ourteam.html
@@ -9,3 +9,12 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
+<body>
+	<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="html/index.html">landing</a></li>
+      <li class="breadcrumb-item"><a href="html/ourteam.html">our team</a></li>
+    </ol>
+  </nav>
+</body>
