--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 		</div>
 	</section>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.1/umd/react.production.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.1/umd/react.production.min.js">
+	</script>
 </body>
 
 </html>
