--- a/html/jointheteam.html
+++ b/html/jointheteam.html
@@ -9,3 +9,32 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
+<body>
+	<header>
+		<h1> we'd love to know more about you! <h1>
+	</header>
+	<div></div>
+	<form action="html/formdata.html" method="POST">
+		<label for="first-name"> first name: </label>
+	<input type="text" name="first-name" id="first-name">
+		<div></div>
+	<label for="last-name"> last name: </label>
+	<input type="text" name="last-name" id="last-name">
+		<div></div>
+	<label for="email-address"> personal email: </label>
+	<input type="email" name="email-address" id="email-address">
+	<div></div>
+	<div></div>
+	<div></div>
+    <button type="submit" class="btn btn-primary">hop onboard!</button>
+  </form>
+
+<body>
+	<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="html/index.html">landing</a></li>
+      <li class="breadcrumb-item"><a href="html/jointheteam.html">join the team</a></li>
+    </ol>
+  </nav>
+</body>
