added photos, member names, about us, favicon, and fixed footers on all

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -3,18 +3,42 @@
 
 <head>
 	<title>c-pphs student council</title>
+	<link rel="shortcut icon" type="image/jpg" href="/images/favicon.png">
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
 	 crossorigin="anonymous">
-	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
+	<header class="container">
+		<div class="row">
+			<h1 class="col-sm-4">#hawknation</h1>
+			<nav class="col-sm-8 text-center">
+				<p class="nav-item"> <a class="nav-link" href="/html/upcomingevents.html"> upcoming events &#9734 </a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/photos.html"> photos &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/spiritwear.html"> spiritwear &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/ourteam.html"> our team &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/jointheteam.html"> join the team &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/aboutus.html"> about us &#9734</a></p>
+			</nav>
+		</div>
+	</header>
+<h2>we organize homecoming. semiformal. pep rallies.</h2>
+<h3>but that's it, right?</h3>
+<h2>well, think again.</h2>
+<h3>student council brings the delectful snacks to the cafeteria bimonthly.</h3>
+<h3>student council runs the annual #beathungerbeathorseheads food drive.</h3>
+<h3>student council — now more than ever — unifies the student body amidst physical distancing.</h3>
+
 	<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="html/index.html">landing</a></li>
-      <li class="breadcrumb-item"><a href="html/aboutus.html">about us</a></li>
-    </ol>
-  </nav>
+		<ol class="breadcrumb">
+			<li class="breadcrumb-item"><a href="/html/index.html">landing</a></li>
+			<li class="breadcrumb-item"><a href="/html/aboutus.html">about us</a></li>
+		</ol>
+	</nav>
 </body>
+
+
+</html>
