--- a/html/jointheteam.html
+++ b/html/jointheteam.html
@@ -3,20 +3,35 @@
 
 <head>
 	<title>c-pphs student council</title>
+	<link rel="shortcut icon" type="image/jpg" href="/images/favicon.png">
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
 	 crossorigin="anonymous">
-	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body>
-	<header>
+	<header class="col-sm-6 text-center">
 		<h1> we'd love to know more about you! <h1>
 	</header>
-	<div></div>
-	<form action="html/formdata.html" method="POST">
-		<label for="first-name"> first name: </label>
+
+	<body>
+		<header class="container">
+		<div class="row">
+			<h1 class="col-sm-4">#hawknation</h1>
+			<nav class="col-sm-8 text-center">
+				<p class="nav-item"> <a class="nav-link" href="/html/upcomingevents.html"> upcoming events &#9734 </a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/photos.html"> photos &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/spiritwear.html"> spiritwear &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/ourteam.html"> our team &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/jointheteam.html"> join the team &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/aboutus.html"> about us &#9734</a></p>
+			</nav>
+		</div>
+	</header>
+	<section class="row">
+		<form action="html/formdata.html" method="POST">
+			<label for="first-name"> first name: </label>
 	<input type="text" name="first-name" id="first-name">
 		<div></div>
 	<label for="last-name"> last name: </label>
@@ -24,17 +39,17 @@
 		<div></div>
 	<label for="email-address"> personal email: </label>
 	<input type="email" name="email-address" id="email-address">
-	<div></div>
-	<div></div>
-	<div></div>
     <button type="submit" class="btn btn-primary">hop onboard!</button>
   </form>
+	</section>
+	</body>
 
-<body>
-	<nav aria-label="breadcrumb">
+		<nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="html/index.html">landing</a></li>
-      <li class="breadcrumb-item"><a href="html/jointheteam.html">join the team</a></li>
+      <li class="breadcrumb-item"><a href="/html/index.html">landing</a></li>
+      <li class="breadcrumb-item"><a href="/html/jointheteam.html">join the team</a></li>
     </ol>
+	</div>
   </nav>
-</body>
+
+</html>
