--- a/html/ourteam.html
+++ b/html/ourteam.html
@@ -3,18 +3,83 @@
 
 <head>
 	<title>c-pphs student council</title>
+	<link rel="shortcut icon" type="image/jpg" href="/images/favicon.png">
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
 	 crossorigin="anonymous">
-	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
+		<header class="container">
+		<div class="row">
+			<h1 class="col-sm-4">#hawknation</h1>
+			<nav class="col-sm-8 text-center">
+				<p class="nav-item"> <a class="nav-link" href="/html/upcomingevents.html"> upcoming events &#9734 </a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/photos.html"> photos &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/spiritwear.html"> spiritwear &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/ourteam.html"> our team &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/jointheteam.html"> join the team &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/aboutus.html"> about us &#9734</a></p>
+			</nav>
+		</div>
+	</header>
+	<div class="flexbox">
+		<h1>'20-'21 officers</h1>
+		<img src="/images/profile1.png" width=100 height=100>
+		<ul>President: Keli Smith, 12</ul>
+		<img src="/images/profile1.png" width=100 height=100>
+		<ul>Vice President: Preston Ogunwumi, 10</ul>
+		<img src="/images/profile1.png" width=100 height=100>
+		<ul>Treasurer: Kiara Ball, 11</ul>
+		<img src="/images/profile1.png" width=100 height=100>
+		<ul>Secretary: Ria Gupta, 12</ul>
+	</div> 
+
+	<div class="flexbox">
+	<h1>all members</h1>
+	<li>Surav Amin</li>
+	<li>Berlyn Arnold</li>
+	<li>Ashton Bange</li>
+	<li>Noah Bange</li>
+	<li>Alexandra Behn</li>
+	<li>Sarah Buman</li>
+	<li>Roderick Burdick</li>
+	<li>Josie Carl</li>
+	<li>Seojun Cho</li>
+	<li>Aidan Eberlin</li>
+	<li>Elena Ehrhart</li>
+	<li>Riley Ford</li>
+	<li>Merica Griffin</li>
+	<li>Arianna Haskins</li>
+	<li>Alexis Hawkins</li>
+	<li>Mckenna Hill</li>
+	<li>Sarah Huff</li>
+	<li>Nicholas Jubilee</li>
+	<li>Holly Kniffin</li>
+	<li>Maya Koffij</li>
+	<li>Anna Marchionda</li>
+	<li>Claire Maurer</li>
+	<li>Anthony Mendoza</li>
+	<li>Jenna Moylan</li>
+	<li>Molly Moylan</li>
+	<li>Mason Roloson</li>
+	<li>Peyton Ryan</li>
+	<li>Kelly Scouten</li>
+	<li>Sofia Scouten</li>
+	<li>Devan Simpson</li>
+	<li>Katelyn Stanbro</li>
+	<li>Camryn Stefanini</li>
+	<li>Sofia Sterbenk</li>
+	<li>Erin Thomas</li>
+	<li>Brooke Yorio</li>
+</div>
 	<nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="html/index.html">landing</a></li>
-      <li class="breadcrumb-item"><a href="html/ourteam.html">our team</a></li>
+      <li class="breadcrumb-item"><a href="/html/index.html">landing</a></li>
+      <li class="breadcrumb-item"><a href="/html/ourteam.html">our team</a></li>
     </ol>
   </nav>
 </body>
+</html>
