--- a/html/photos.html
+++ b/html/photos.html
@@ -3,18 +3,38 @@
 
 <head>
 	<title>c-pphs student council</title>
+	<link rel="shortcut icon" type="image/jpg" href="/images/favicon.png">
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
 	 crossorigin="anonymous">
-	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
+	<header class="container">
+		<div class="row">
+			<h1 class="col-sm-4">#hawknation</h1>
+			<nav class="col-sm-8 text-center">
+				<p class="nav-item"> <a class="nav-link" href="/html/upcomingevents.html"> upcoming events &#9734 </a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/photos.html"> photos &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/spiritwear.html"> spiritwear &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/ourteam.html"> our team &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/jointheteam.html"> join the team &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/aboutus.html"> about us &#9734</a></p>
+			</nav>
+		</div>
+	</header>
+	<img src="/images/hawk.png">
+<img src="/images/jennaandabbey.png">
+<img src="/images/oldmeeting.png">
+<img src="/images/winterfestival.png">
+<img src="/images/memorywalk.png">
 	<nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="html/index.html">landing</a></li>
-      <li class="breadcrumb-item"><a href="html/photos.html">photos</a></li>
+      <li class="breadcrumb-item"><a href="/html/index.html">landing</a></li>
+      <li class="breadcrumb-item"><a href="/html/photos.html">photos</a></li>
     </ol>
   </nav>
 </body>
+</html>
