tightened up container css and added content, added buttons

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>c-pphs student council</title>
+	<title>about us</title>
 	<link rel="shortcut icon" type="image/jpg" href="/images/favicon.png">
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
@@ -25,13 +25,20 @@
 			</nav>
 		</div>
 	</header>
+
+<div class="container">
 <h2>we organize homecoming. semiformal. pep rallies.</h2>
 <h3>but that's it, right?</h3>
 <h2>well, think again.</h2>
-<h3>student council brings the delectful snacks to the cafeteria bimonthly.</h3>
-<h3>student council runs the annual #beathungerbeathorseheads food drive.</h3>
-<h3>student council — now more than ever — unifies the student body amidst physical distancing.</h3>
+<h3>student council brings the delectful snacks to the cafeteria twice a month.</h3>
+<h3>student council runs the annual #beathungerbeathorseheads event.</h3>
+<h3>student council supports class councils in person and via social media.</h3>
+<h2>student council — now more than ever — unifies the student body amidst physical separation.</h2>
+<h1>student council has always been the glue that bonds everyone in our school together.</h1>
+<h1>and it always will be.</h1>
+</div>
 
+<div class="container">
 	<nav aria-label="breadcrumb">
 		<ol class="breadcrumb">
 			<li class="breadcrumb-item"><a href="/html/index.html">landing</a></li>
@@ -39,6 +46,7 @@
 		</ol>
 	</nav>
 </body>
+</div>
 
 
 </html>
