--- a/html/jointheteam.html
+++ b/html/jointheteam.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>c-pphs student council</title>
+	<title>join the team</title>
 	<link rel="shortcut icon" type="image/jpg" href="/images/favicon.png">
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
@@ -10,10 +10,6 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
-	<header class="col-sm-6 text-center">
-		<h1> we'd love to know more about you! <h1>
-	</header>
 
 	<body>
 		<header class="container">
@@ -30,7 +26,10 @@
 		</div>
 	</header>
 	<section class="row">
-		<form action="html/formdata.html" method="POST">
+
+	<div class="container">
+	<h3>we'd love to know more about you!</h3>
+	<form action="/html/formdata.html" method="POST">
 			<label for="first-name"> first name: </label>
 	<input type="text" name="first-name" id="first-name">
 		<div></div>
@@ -41,15 +40,18 @@
 	<input type="email" name="email-address" id="email-address">
     <button type="submit" class="btn btn-primary">hop onboard!</button>
   </form>
+	</div>
 	</section>
 	</body>
 
-		<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="/html/index.html">landing</a></li>
-      <li class="breadcrumb-item"><a href="/html/jointheteam.html">join the team</a></li>
-    </ol>
-	</div>
-  </nav>
+<div class="container">
+	<nav aria-label="breadcrumb">
+		<ol class="breadcrumb">
+			<li class="breadcrumb-item"><a href="/html/index.html">landing</a></li>
+			<li class="breadcrumb-item"><a href="/html/jointheteam.html">join the team</a></li>
+		</ol>
+	</nav>
+</body>
+</div>
 
 </html>
