--- a/html/photos.html
+++ b/html/photos.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>c-pphs student council</title>
+	<title>photos</title>
 	<link rel="shortcut icon" type="image/jpg" href="/images/favicon.png">
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
@@ -25,16 +25,21 @@
 			</nav>
 		</div>
 	</header>
-	<img src="/images/hawk.png">
+<div class="container">
+<img src="/images/hawk.png">
 <img src="/images/jennaandabbey.png">
 <img src="/images/oldmeeting.png">
 <img src="/images/winterfestival.png">
 <img src="/images/memorywalk.png">
+</div>
+<div class="container">
 	<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="/html/index.html">landing</a></li>
-      <li class="breadcrumb-item"><a href="/html/photos.html">photos</a></li>
-    </ol>
-  </nav>
+		<ol class="breadcrumb">
+			<li class="breadcrumb-item"><a href="/html/index.html">landing</a></li>
+			<li class="breadcrumb-item"><a href="/html/photos.html">photos</a></li>
+		</ol>
+	</nav>
+</body>
+</div>
 </body>
 </html>
