--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>c-pphs student council</title>
+	<title>corning-painted post high school student council</title>
 	<link rel="shortcut icon" type="image/jpg" href="/images/favicon.png">
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
@@ -16,12 +16,12 @@
 		<div class="row">
 			<h1 class="col-sm-4">#hawknation</h1>
 			<nav class="col-sm-8 text-center">
-				<p class="nav-item"> <a class="nav-link" href="html/upcomingevents.html"> upcoming events &#9734 </a></p>
-				<p class="nav-item"> <a class="nav-link" href="html/photos.html"> photos &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="html/spiritwear.html"> spiritwear &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="html/ourteam.html"> our team &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="html/jointheteam.html"> join the team &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="html/aboutus.html"> about us &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/upcomingevents.html"> upcoming events &#9734 </a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/photos.html"> photos &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/spiritwear.html"> spiritwear &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/ourteam.html"> our team &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/jointheteam.html"> join the team &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="/html/aboutus.html"> about us &#9734</a></p>
 			</nav>
 		</div>
 	</header>
@@ -30,7 +30,7 @@
 			<div class="row text-center">
 				<h2>welcome to the cpphs student council</h2>
 				<h3>&#9733 where students are the center of all we do &#9733</h3>
-				<a class="btn btn-primary" href="html/aboutus.html" role="button">about us</a>
+				<a class="btn btn-primary" href="/html/aboutus.html" role="button">about us</a>
 			</div>
 		</div>
 	</section>
