--- a/html/ourteam.html
+++ b/html/ourteam.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>c-pphs student council</title>
+	<title>our team</title>
 	<link rel="shortcut icon" type="image/jpg" href="/images/favicon.png">
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
@@ -25,20 +25,30 @@
 			</nav>
 		</div>
 	</header>
-	<div class="flexbox">
-		<h1>'20-'21 officers</h1>
+<div class="container">
+		<h2>our advisors</h2>
 		<img src="/images/profile1.png" width=100 height=100>
-		<ul>President: Keli Smith, 12</ul>
+		<p>Mrs. Stephanie Hillman (English Teacher)</p>
 		<img src="/images/profile1.png" width=100 height=100>
-		<ul>Vice President: Preston Ogunwumi, 10</ul>
+		<p>Mrs. Julie Pusateri (Freshman Guidance)</p>
 		<img src="/images/profile1.png" width=100 height=100>
-		<ul>Treasurer: Kiara Ball, 11</ul>
+		<p>Mrs. Mandy Freeman (Freshman Guidance)</p>
+	</div> 
+	
+	<div class="container">
+		<h2>'20-'21 officers</h2>
 		<img src="/images/profile1.png" width=100 height=100>
-		<ul>Secretary: Ria Gupta, 12</ul>
+		<p>President: Keli Smith, 12</p>
+		<img src="/images/profile1.png" width=100 height=100>
+		<p>Vice President: Preston Ogunwumi, 10</p>
+		<img src="/images/profile1.png" width=100 height=100>
+		<p>Treasurer: Kiara Ball, 11</p>
+		<img src="/images/profile1.png" width=100 height=100>
+		<p>Secretary: Ria Gupta, 12</p>
 	</div> 
 
-	<div class="flexbox">
-	<h1>all members</h1>
+	<div class="container">
+	<h2>all members</h2>
 	<li>Surav Amin</li>
 	<li>Berlyn Arnold</li>
 	<li>Ashton Bange</li>
@@ -74,12 +84,14 @@
 	<li>Sofia Sterbenk</li>
 	<li>Erin Thomas</li>
 	<li>Brooke Yorio</li>
-</div>
+<div class="container">
 	<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="/html/index.html">landing</a></li>
-      <li class="breadcrumb-item"><a href="/html/ourteam.html">our team</a></li>
-    </ol>
-  </nav>
+		<ol class="breadcrumb">
+			<li class="breadcrumb-item"><a href="/html/index.html">landing</a></li>
+			<li class="breadcrumb-item"><a href="/html/ourteam.html">our team</a></li>
+		</ol>
+	</nav>
+</body>
+</div>
 </body>
 </html>
