--- a/html/upcomingevents.html
+++ b/html/upcomingevents.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>c-pphs student council</title>
+	<title>upcoming events</title>
 	<link rel="shortcut icon" type="image/jpg" href="/images/favicon.png">
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
@@ -25,11 +25,14 @@
 			</nav>
 		</div>
 	</header>
+<div class="container">
 	<nav aria-label="breadcrumb">
 		<ol class="breadcrumb">
-			<li class="breadcrumb-item"><a href="/html.index.html">landing</a></li>
-			<li class="breadcrumb-item"><a href="/html/upcomingevents.html">events</a></li>
+			<li class="breadcrumb-item"><a href="/html/index.html">landing</a></li>
+			<li class="breadcrumb-item"><a href="/html/upcomingevents.html">upcoming events</a></li>
 		</ol>
 	</nav>
+</body>
+</div>
 </body>
 </html>
