totally changed css with new  jumbotron and footer colors, new button colors, new theme overall

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -31,14 +31,15 @@
 	<h3>but that's it, right?</h3>
 	<h2>well, think again.</h2>
 	<hr></hr>
-	<h3>student council brings the delectful snacks to the cafeteria twice a month.</h3>
+	<h3>student council brings snacks to the cafeteria every two months.</h3>
 	<h3>student council runs the annual #beathungerbeathorseheads event.</h3>
 	<h3>student council supports class councils in person and via social media.</h3>
 	<h2>student council — now more than ever — unifies the student body amidst physical separation.</h2>
-	<h1>student council has always been the glue that bonds everyone in our school together.</h1>
+	<h1>student council has always been the glue that bonds our school together.</h1>
 	<h1>and it always will be.</h1>
 </div>
 
+<br>
 <div class="container" id="bread">
 	<nav aria-label="breadcrumb">
 		<ol class="breadcrumb">
