--- a/html/ourteam.html
+++ b/html/ourteam.html
@@ -25,7 +25,8 @@
 			</nav>
 		</div>
 	</header>
-<div class="container">
+
+	<div class="container">
 		<h2>our advisors</h2>
 		<img src="/images/profile1.png" width=100 height=100>
 		<p>Mrs. Stephanie Hillman (English Teacher)</p>
@@ -48,42 +49,45 @@
 	</div> 
 
 	<div class="container">
-	<h2>all members</h2>
-	<li>Surav Amin</li>
-	<li>Berlyn Arnold</li>
-	<li>Ashton Bange</li>
-	<li>Noah Bange</li>
-	<li>Alexandra Behn</li>
-	<li>Sarah Buman</li>
-	<li>Roderick Burdick</li>
-	<li>Josie Carl</li>
-	<li>Seojun Cho</li>
-	<li>Aidan Eberlin</li>
-	<li>Elena Ehrhart</li>
-	<li>Riley Ford</li>
-	<li>Merica Griffin</li>
-	<li>Arianna Haskins</li>
-	<li>Alexis Hawkins</li>
-	<li>Mckenna Hill</li>
-	<li>Sarah Huff</li>
-	<li>Nicholas Jubilee</li>
-	<li>Holly Kniffin</li>
-	<li>Maya Koffij</li>
-	<li>Anna Marchionda</li>
-	<li>Claire Maurer</li>
-	<li>Anthony Mendoza</li>
-	<li>Jenna Moylan</li>
-	<li>Molly Moylan</li>
-	<li>Mason Roloson</li>
-	<li>Peyton Ryan</li>
-	<li>Kelly Scouten</li>
-	<li>Sofia Scouten</li>
-	<li>Devan Simpson</li>
-	<li>Katelyn Stanbro</li>
-	<li>Camryn Stefanini</li>
-	<li>Sofia Sterbenk</li>
-	<li>Erin Thomas</li>
-	<li>Brooke Yorio</li>
+		<h2>all members</h2>
+		<li>Surav Amin</li>
+		<li>Berlyn Arnold</li>
+		<li>Ashton Bange</li>
+		<li>Noah Bange</li>
+		<li>Alexandra Behn</li>
+		<li>Sarah Buman</li>
+		<li>Roderick Burdick</li>
+		<li>Josie Carl</li>
+		<li>Seojun Cho</li>
+		<li>Aidan Eberlin</li>
+		<li>Elena Ehrhart</li>
+		<li>Riley Ford</li>
+		<li>Merica Griffin</li>
+		<li>Arianna Haskins</li>
+		<li>Alexis Hawkins</li>
+		<li>Mckenna Hill</li>
+		<li>Sarah Huff</li>
+		<li>Nicholas Jubilee</li>
+		<li>Holly Kniffin</li>
+		<li>Maya Koffij</li>
+		<li>Anna Marchionda</li>
+		<li>Claire Maurer</li>
+		<li>Anthony Mendoza</li>
+		<li>Jenna Moylan</li>
+		<li>Molly Moylan</li>
+		<li>Mason Roloson</li>
+		<li>Peyton Ryan</li>
+		<li>Kelly Scouten</li>
+		<li>Sofia Scouten</li>
+		<li>Devan Simpson</li>
+		<li>Katelyn Stanbro</li>
+		<li>Camryn Stefanini</li>
+		<li>Sofia Sterbenk</li>
+		<li>Erin Thomas</li>
+		<li>Brooke Yorio</li>
+	</div>
+
+<br>
 <div class="container" id="bread">
 	<nav aria-label="breadcrumb">
 		<ol class="breadcrumb">
@@ -91,7 +95,8 @@
 			<li class="breadcrumb-item"><a href="/html/ourteam.html">our team</a></li>
 		</ol>
 	</nav>
-</body>
 </div>
+
 </body>
+
 </html>
