--- a/html/jointheteam.html
+++ b/html/jointheteam.html
@@ -55,7 +55,7 @@
 		<h3 id="heading-3">no matter your schedule or experience, we'd love to have you on our team! student council members do it all, and everyone brings their own magic to the table. just fill out the quick form below and we'll be in touch with next steps. </h3>
 		<div></div>
 		<h3>we'd love to know more about you!</h3>
-		<form action="index.php" method="POST" onsubmit="validateForm()" id="join">
+		<form action="https://send.pageclip.co/tF67lbAwtFvpAylXPhzVIIeRqx4GSCBL" class="pageclip-form" method="POST" onsubmit="validateForm()" id="join">
 		<label for="first-name"> first name: </label>
 		<input type="text" name="first-name" id="first-name" required>
 		<br>
