--- a/html/jointheteam.html
+++ b/html/jointheteam.html
@@ -11,6 +11,8 @@
 	<script src="../script.js">
 	</script>
 	<link rel="stylesheet" type="text/css" href="../style.css">
+	<link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
+
 </head>
 
 <div class="topnav" id="searchbar">
@@ -108,7 +110,9 @@
   	<h3>anything else you'd like us to know? </h3>
 		<textarea id="info" name="info" rows="3" cols="40"></textarea>
 		<br>
-		<button type="submit" class="btn btn-primary">hop onboard!</button>
+	  <button type="submit" class="pageclip-form__submit">
+	    <span>Send</span>
+	  </button>
   	</form>
 		</div>
 	</section>
@@ -157,8 +161,9 @@
 			<li class="breadcrumb-item"><a href="jointheteam.html">join the team</a></li>
 		</ol>
 	</nav>
-</div>
-
+	</div>
+	
+<script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 </body>
 
 </html>
