--- a/html/jointheteam.html
+++ b/html/jointheteam.html
@@ -111,7 +111,7 @@
 		<textarea id="info" name="info" rows="3" cols="40"></textarea>
 		<br>
 	  <button type="submit" class="pageclip-form__submit">
-	    <span>Send</span>
+	    <span>hop onboard!</span>
 	  </button>
   	</form>
 		</div>
