--- a/readme.html
+++ b/readme.html
@@ -1,5 +1,3 @@
-# stucowebsite
-
-an amazing revolutionary website that will change the face of student council !!!
+a revolutionary website that will change the face of student council!
 
 view finished site: https://cpphsstudentcouncil.rg663.repl.co/
