--- a/readme.html
+++ b/readme.html
@@ -1,3 +1,3 @@
 a revolutionary website that will change the face of student council!
 
-view finished site: https://cpphsstudentcouncil.rg663.repl.co/
+view finished site: http://rg663.github.io/student-council-website/
